--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Battleground.Battleground
+EditorStartupMap=/Game/_Levels/Battleground.Battleground
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -15,7 +15,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Battleground.Battleground
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/BattleTank.BattleTankGameModeBase
 GlobalDefaultServerGameMode=None
