Finalized the TankMovementComponent. Added Right Turn AI Tanks now turn and move towards the Player

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=8B6B206549DDDCCBA5E094AAD994C7BD
+CopyrightNotice=Copyright Vici Videogames
+
